fixed: images in Grid theme print/PDF view overflow into neighboring cells,
https://github.com/kobotoolbox/enketo-express/issues/977

--- a/app/views/styles/component/_common-ui.scss
+++ b/app/views/styles/component/_common-ui.scss
@@ -7,7 +7,3 @@
 .main-loader__image {
     border-color: $brand-primary-color;
 }
-
-.main {
-    @include transition-fast;
-}
